# FFC-2

./: .gitignore  pca.md  scaffold.sh
funding_curve/: README.md  pyproject.toml
funding_curve/funding_curve/: feature_build.py  feature_extractor.py  funding_collectors.py
funding_curve/funding_curve/builders/: curve.py
funding_curve/funding_curve/pipelines/: ingest.py  snapshot.py
funding_curve/funding_curve/tests/: smoke_binance.py  smoke_bybit.py
funding_curve/notebooks/: 01_curve_qc.ipynb  01_curve_qc.py
funding_curve/notebooks/storage/processed/: curve_live.parquet  feature_store.parquet
funding_curve/storage/processed/: curve_live.parquet  feature_store.parquet
