[tool.poetry]
name = "funding_curve"
version = "0.1.0"
description = ""
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
aiohttp = "^3.9"
websockets = "^12"
pydantic = "^2.7"
pandas = "^2.2.3"
pyarrow = "^19.0.1"
fastparquet = "^2024.11.0"
loguru = "^0.7.3"
tqdm = "^4.67.1"
ipykernel = "^6.29.5"
yfinance = "^0.2.57"
matplotlib = "^3.10.1"
scikit-learn = "^1.6.1"
